added login and regis page and functions